# spectrometer_cli

./: .gitmodules  Cargo.toml  flake.nix  lib.nix  targets.nix
ccd_lcamv06/: Cargo.toml
ccd_lcamv06/benches/: response_parser.rs
ccd_lcamv06/src/: ccd.rs  command.rs  command_encoder.rs  config.rs  error.rs  flags.rs  hex_parser.rs  lib.rs  response_parser.rs  types.rs
ccd_lcamv06/src/codec/: decoder.rs  encoder.rs  framed_serial_nb.rs  framed_state.rs  framed_std.rs  mod.rs
ccd_lcamv06/src/codec/nb_traits/: mod.rs  sink.rs  stream.rs
ccd_lcamv06/src/io_adapter/: embedded_hal.rs  mod.rs  std_io.rs
ccd_lcamv06/src/response/: mod.rs  parser.rs  version_details.rs  version_parser.rs
ccd_lcamv06/src/tests/: mod.rs  response_decoder.rs  single_reading_example.txt  stream_example.txt
ccd_lcamv06/tests/: ccd.rs
ccd_lcamv06/utilities/: Cargo.toml
ccd_lcamv06/utilities/src/: lib.rs
nix/: cargoPackage.nix  craneLibOverlay.nix  packages.nix
nix/cargoPkgBuilder/: mingwW64.nix  musl.nix
nix/overlays/: craneLib.nix
sbc_config/: Config.in  external.mk  shell.nix
sbc_config/buildroot-external/: external.desc
sbc_config/buildroot-external/configs/: raspberrypi3_64_spectrometer_defconfig  raspberrypi4_64_spectrometer_defconfig
sbc_config/buildroot-external/package/spectrometer_sbc/: Config.in  env  init.sh  rsync-post-process  spectrometer_sbc.mk
sbc_config/buildroot-external/package/wasm-pack/: wasm-pack.mk
sbc_config/configs/: raspberrypi3_64_spectrometer_defconfig
sbc_config/package/spectrometer_sbc/: Config.in  S99spectrometer-sbc  rsync-post-process  spectrometer_sbc.mk
spectrometer_cli/: Cargo.toml  build.rs
spectrometer_cli/resources/: resources.rc
spectrometer_cli/src/: cli.rs  main.rs  output.rs  serial.rs
spectrometer_sbc/: .gitignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml
spectrometer_sbc/end2end/: pnpm-lock.yaml
spectrometer_sbc/end2end/tests/: example.spec.ts
spectrometer_sbc/src/: app.rs  echart.js  echart.rs  fileserv.rs  gpio.rs  lib.rs  main.rs  server_funcs.rs  state.rs
spectrometer_sbc/src/components/: chart.rs  mod.rs
src/: ccd_codec.rs  cli.rs  main.rs
