[workspace]
members = [
    "ccd_lcamv06",
    "spectrometer_cli",
    "spectrometer_sbc"
]
exclude = ["sbc_config"]

[workspace.dependencies]
log = "0.4"
env_logger = "0.10"
serialport = "4.2"
plotters = "0.3"
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }

[profile.release]
lto = true # Link time optimization
opt-level = "s" # Optimize for size
codegen-units = 1 # Optimization at a cost of non-parallel compilation
strip = "debuginfo" # Remove debug symbols
