[workspace]
members = [
    "ccd_lcamv06",
    "spectrometer_cli",
    "spectrometer_sbc"
]
exclude = ["sbc_config"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["Vladimir Romashchenko <eaglesemanation@gmail.com>"]

[profile.release]
lto = true # Link time optimization
opt-level = "s" # Optimize for size
codegen-units = 1 # Optimization at a cost of non-parallel compilation
strip = "debuginfo" # Remove debug symbols
