[package]
name = "ccd_lcamv06"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["std"]
std = ["thiserror/std", "scopeguard/use_std", "log/std"]

[dependencies]
arraystring = "0.3"
nom = "7.1"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
scopeguard = { version = "1.1", default-features = false }
log = { workspace = true, default-features = false }

[dev-dependencies]
claims = "0.7"
criterion = "0.3"
utilities = { path = "utilities" }

[[bench]]
name = "response_parser"
harness = false
