[package]
name = "ccd_lcamv06"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "embedded-hal-nb"]
std = ["thiserror/std", "scopeguard/use_std", "log/std", "strum/std"]
embedded-hal-nb = ["dep:nb", "dep:embedded-hal-nb"]

[dependencies]
arraystring = "0.3"
nom = "7.1"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
scopeguard = { version = "1.1", default-features = false }
strum = { version = "0.24", default-features = false, features = ["derive"] }
strum_macros = { version = "0.24" }
log = { workspace = true, default-features = false }
nb = { version = "1.0", optional = true }
embedded-hal-nb = { version = "1.0.0-alpha.1", optional = true }

[dev-dependencies]
claims = "0.7"
criterion = "0.3"
utilities = { path = "utilities" }

[[bench]]
name = "response_parser"
harness = false

[[test]]
name = "ccd"
