[package]
name = "spectrometer_cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ccd_lcamv06 = { path = "../ccd_lcamv06" }
atty = "0.2"
clap = { version = "3.2", features = ["derive"] }
num-traits = "0.2"
simple-eyre = "0.3"
termcolor = "1.1"
serialport = "4.2"

[build-dependencies]
embed-resource = "1.7"
