[package]
name = "spectrometer_cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ccd_lcamv06 = { path = "../ccd_lcamv06", features = ["std"] }
atty = "0.2"
clap = { version = "3.2", features = ["derive"] }
num-traits = "0.2"
simple-eyre = "0.3"
termcolor = "1.1"
serialport.workspace = true
env_logger.workspace = true
log.workspace = true
plotters.workspace = true
time.workspace = true

[build-dependencies]
embed-resource = "1.7"
