[package]
name = "spectrometer_cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2021"
build = "build.rs"

[dependencies]
ccd_lcamv06 = { path = "../ccd_lcamv06", features = ["std"] }
atty = "0.2"
clap = { version = "3.2", features = ["derive"] }
num-traits = "0.2"
simple-eyre = "0.3"
termcolor = "1.1"
log = "0.4"
env_logger = "0.10"
serialport = "4.2"
plotters = "0.3"
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }

[build-dependencies]
embed-resource = "1.7"
