[package]
name = "spectrometer_sbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ccd_lcamv06 = { path = "../ccd_lcamv06", features = ["std"] }
rppal = "0.14"
serialport.workspace = true
env_logger.workspace = true
log.workspace = true
